style: make sure code snippet is always aligned ltr

--- a/style.css
+++ b/style.css
@@ -1776,6 +1776,7 @@ ul {
   padding: 10px 15px;
   overflow: auto;
   white-space: pre;
+  direction: ltr;
 }
 .article-body blockquote {
   border-left: 1px solid #ddd;
@@ -2245,6 +2246,7 @@ ul {
   padding: 10px 15px;
   overflow: auto;
   white-space: pre;
+  direction: ltr;
 }
 .comment-body blockquote {
   border-left: 1px solid #ddd;
@@ -2812,6 +2814,7 @@ ul {
   padding: 10px 15px;
   overflow: auto;
   white-space: pre;
+  direction: ltr;
 }
 .post-body blockquote {
   border-left: 1px solid #ddd;
@@ -4822,6 +4825,7 @@ zd-summary-block {
   padding: 10px 15px;
   overflow: auto;
   white-space: pre;
+  direction: ltr;
 }
 .service-catalog-description blockquote {
   border-left: 1px solid #ddd;
